--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -59,7 +59,7 @@ a {
   height: 700px;
   width: 1200px;
   align-content: center;
-  padding-top: 69px;
+  padding-top: 70px;
   align-self: center;
 }
 
@@ -74,7 +74,6 @@ a {
 
 .sub-container2 {
   display: flex;
-  padding-top: 50px;
 }
 
 #featured {
@@ -82,12 +81,14 @@ a {
   display: block;
   align-self: center;
   margin: auto;
+  padding-top: 70px;
 }
 
 .gallery {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  padding-bottom: 20px;
 }
 
 .photo img{
@@ -113,7 +114,6 @@ a {
 .locations h2 {
   padding-bottom: 15px;
   display: block;
-  opacity: 0.9;
   background-color: transparent;
 }
 
@@ -136,6 +136,21 @@ a {
   margin: 5px 20px;
 }
 
-h3, p {
+h3, h5, p {
   opacity: 0.9;
+}
+
+/* Contact Section */
+.contact {
+  padding-top: 30px;
+  display: block;
+  height: 200px;
+  margin: auto;
+  text-align: center;
+}
+
+/* Footer Section */
+footer h5 {
+  margin: 20px;
+  text-align: left;
 }
